tried experience list style fix on mobile + fixed invalid javascript syntax

--- a/css/style.css
+++ b/css/style.css
@@ -523,7 +523,7 @@ print {
         display: none;
     }
     .experience-item:before {
-        left:-1rem;
+        left:-2rem;
     }
 }
 
